# blocks-of-computer-graphics

./: .gitignore  README.md
base/: README.md  main.cpp
dvd-final-assessment/: .gitignore  CMakeLists.txt  Readme.md  dvd.fragment.fs  dvd.vertex.vs  fragment.fs  main.cpp  vertex.vs
dvd-final-assessment/lib/: stb_image.h
dvd-final-assessment/test/: main.cpp
dvd-redo/: CMakeLists.txt  main.cpp
dvd-redo/glad/: CMakeLists.txt
dvd-redo/glad/include/glad/: glad.h
dvd-redo/glad/src/: glad.c
dvd-redo/lib/: stb_image.h
dvd-redo/shaders/: fragment.frag  vertex.vert
hello-triangle/: .gitignore  CMakeLists.txt  README.md  main.cpp  meson.build
hello-window/: main.cpp
new-base/: CMakeLists.txt  main.cpp
read_from_file/: input.txt  main.cpp  meson.build
render-base/: Makefile  README.md  main.cpp  meson.build
render-base/include/opengl_objects/: opengl_objects.h
render-base/include/shader_class/: shader_class.h
render-base/lib/: render.hpp
render-base/src/opengl_objects/: opengl_objects.cpp
render-base/src/shader_class/: shader_class.cpp
render-cube/: Makefile  README.md  fragment_shader.fs  main.cpp  meson.build  vertex_shader.vs
render-pyramid-exercise/: .gitignore  README.md  main.cpp  meson.build  vertex_shader.vs
render-pyramid-exercise/lib/: logging.hpp
render-rectangle/: README.md  main.cpp  meson.build  vertex_shader.vs
render-square/: .gitignore  Makefile  Readme.md  main.cpp  meson.build
render-square/lib/: glad.c
render-texture/: README.md  main.cpp  meson.build  vertex_shader.vs
render-texture/lib/include/glad/: glad.h
render-triangle/: README.md  fragment_shader.fs  main.cpp  meson.build  vertex_shader.vs
render-triangle-multicolor/: README.md  fragment_shader.fs  main.cpp  meson.build  vertex_shader.vs
render-triangle-uniforms/: Makefile  README.md  Screencast from 2024-03-14 16-26-26.webm  fragment_shader.fs  main.cpp  meson.build
render_class/: README.md  main.cpp  meson.build
render_class/lib/: render.h
shaders/: Readme.md
